# FastLM-API

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  database.py  dependencies.py  main.py  models.py  plugins_setup.py  redis_client.py  schemas.py  security.py  settings.py
app/routers/: admin.py  completions.py
app/services/: quota.py  request_log.py  tokens.py  webhooks.py
sdk/: README.md  pyproject.toml
sdk/src/fastlm_sdk/: __init__.py  client.py  types.py
tests/: conftest.py  requirements.txt  test_stream.py
tests/unit/: conftest.py  test_admin.py  test_completions.py  test_quota.py  test_webhooks.py
